fixed spin button small screen

--- a/Slot-Machine/src/SlotMachine.css
+++ b/Slot-Machine/src/SlotMachine.css
@@ -388,4 +388,7 @@ body {
   .toggle-theme-button{
     align-self: center;
   }
+  .toggle-theme-button{
+    width: 120px;
+  }
 }
